@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  - Added support for immutable packages, and test for same.
+
 0.05 Thu Mar 05 2015
 
   - Refine returns to allow methods to return arrays
